[package]
name = "hbak"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
hbak_common = { path = "../hbak_common" }
hex = "0.4.3"
rpassword = "7.3.1"
thiserror = "1.0"
