[package]
name = "hbak_common"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sys-mount = { version = "2.1.0", default-features = false }
thiserror = "1.0"
toml = "0.8.8"
