[package]
name = "hbak_common"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20 = "0.9.1"
chacha20poly1305 = { version = "0.10.1", features = ["stream", "std"] }
chrono = { version = "0.4.31", features = ["serde"] }
pbkdf2 = { version = "0.12.2", features = ["parallel"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
sys-mount = { version = "2.1.0", default-features = false }
thiserror = "1.0"
toml = "0.8.8"
