[package]
name = "hbak_common"
version = "0.3.3-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.2", default-features = false, features = ["std"] }
bincode = "1.3.3"
chacha20 = "0.9.1"
chacha20poly1305 = { version = "0.10.1", features = ["stream", "std"] }
chrono = { version = "0.4.31", features = ["serde"] }
hmac = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false }
subtle = "2.5.0"
sys-mount = { version = "2.1.0", default-features = false }
thiserror = "1.0"
toml = "0.8.8"
