[package]
name = "hbakd"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
fork = "0.1.22"
hbak_common = { version = "0.1.0-dev", path = "../hbak_common" }
thiserror = "1.0"
