[package]
name = "hbakd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.2", features = ["termination"] }
hbak_common = { version = "0.1.0-dev", path = "../hbak_common" }
thiserror = "1.0"
