[package]
name = "hbakd"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
daemonizr = "0.1.5"
hbak_common = { path = "../hbak_common" }
thiserror = "1.0"
